t3-cicd-backend/minikube/configservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configservice
  namespace: t3cicdbackend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configservice
  template:
    metadata:
      labels:
        app: configservice
    spec:
      containers:
        - name: configservice
          image: t3cicdbackend-configservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /mnt/git-repo/
              name: git-repo
      volumes:
        - name: git-repo
          persistentVolumeClaim:
            claimName: git-repo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: configservice
  namespace: t3cicdbackend
spec:
  selector:
    app: configservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
