t3-cicd-backend/minikube/pipelineservice-deployment.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pipelineservice
  namespace: t3cicdbackend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pipelineservice
  template:
    metadata:
      labels:
        app: pipelineservice
    spec:
      containers:
        - name: pipelineservice
          image: t3cicdbackend-pipelineservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /mnt/git-repo/
              name: git-repo
            - mountPath: /var/run/docker.sock
              name: docker-socket
      volumes:
        - name: git-repo
          persistentVolumeClaim:
            claimName: git-repo-pvc
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
            type: Socket
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: pipelineservice
  namespace: t3cicdbackend
spec:
  selector:
    app: pipelineservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
