t3-cicd-backend/minikube/ingress-controller-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller-prod
  namespace: t3cicdbackend
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  ingressClassName: nginx # Ensure this matches your Ingress Controller in `kubectl get ingressclass`
  defaultBackend:
    service:
      name: configservice
      port:
        number: 8080
  rules:
    - host: example.cicd.com # TODO: replace with a valid domain name once DNS resolution is ready
      http:
        paths:
          - path: /validate
            pathType: Prefix
            backend:
              service:
                name: configservice
                port:
                  number: 8080
          - path: /pipeline/run
            pathType: Prefix
            backend:
              service:
                name: pipelineservice
                port:
                  number: 8080
